# URBAN-SYN

./: .dockerignore  .gitattributes  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yml  postCreate.sh
baselines/gan/lstm_trajgan/: .dockerignore  Dockerfile  NOTES.md  README.md  docker-compose.yml
baselines/gan/lstm_trajgan/repo/: LSTM_TrajGAN_TUL_Task_Performance_Reproduction.ipynb
baselines/gan/ts_trajgen/: .dockerignore  Dockerfile  README.md  build_tstrajgen_inputs.py  dataclass_models.py  docker-compose.yml  ensure_geo_feature_columns.py  requirements.txt  utils.py
baselines/gan/ts_trajgen/repo/: our_model_generate.py  our_model_generate_using_gan.py  prepare_region_feature.py  pretrain_function_g_fc.py  pretrain_gat_fc.py  pretrain_region_function_g_fc.py  pretrain_region_gat_fc.py  train_gan.py  train_region_gan.py
baselines/gan/ts_trajgen/repo/config/: example.yaml
baselines/gan/ts_trajgen/repo/script/: build_region_processed_traj.py  (+11 more)
baselines/gan/ts_trajgen/tests/: test_build_mm_csvs.py
fmm_scripts/: README.md  docker-compose.yml  dockerfile  map_match.py  prepare_fmm_inputs.py
fmm_scripts/config/: fmm_config_csv_point.xml  ubodt_config.xml
meetings/: 2026-02-02-advisor.md  2026-02-04-team.md  2026-02-15-team.md  2026-02-16-advisor.md  2026-02-16-team.md  2026-02-23-team.md  2026-03-02-advisor.md  2026-03-04-team.md  2026-03-07-team.md  2026-03-16-advisor.md  2026-03-16-team.md  2026-03-30-advisor.md  2026-03-30-team.md  2026-04-06-team.md  2026-04-20-advisor.md
scripts/: test.ipynb
(+3 files in other folders)
